samples/_failures_safe/1761442620_a6c299_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_259a4191.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_259a4191.c:162:5: error: expected expression at end of input
  162 |     } else if (
      |     ^
./samples/SAFE/__tmp_259a4191.c:162:5: error: expected declaration or statement at end of input
